<resources>
    <string name="app_name">Alarm Control</string>
    <string name="action_settings">Settings</string>
    <string name="error">Error!</string>

    <string name="alarm_status_label">Alarm Status</string>
    <string name="armed_label">Armed:</string>
    <string name="alarm_label">Alarm:</string>

    <string name="arm">Arm</string>
    <string name="disarm">Disarm</string>
    <string name="refresh">Refresh</string>

    <string name="title_activity_settings">Settings</string>
    <string name="settings_auto_refresh">Auto Refresh</string>
    <string name="settings_launchpad_ip">Launchpad IP</string>

</resources>
